--- a/福利姬频道总目录/Nyako喵子全集/menu.html
+++ b/福利姬频道总目录/Nyako喵子全集/menu.html
@@ -36,5 +36,10 @@
   <p><a href="https://telegra.ph/Nyako喵子7月电子版14-チャイナドレス178p-加购-08-25">【Nyako喵子】7月电子版14 チャイナドレス[178p] 加购</a></p>
   <p><a href="https://telegra.ph/Nyako喵子7月电子版14-チャイナドレス178p-08-25">【Nyako喵子】7月电子版14 チャイナドレス[178p]</a></p>
   <p><a href="https://telegra.ph/Nyako喵子6月电子版13-縛られたの人妻125p5v-08-25">【Nyako喵子】6月电子版13 縛られたの人妻[125p+5v]</a></p>
+  <p><a href="https://telegra.ph/喵子Nyako-原神甘雨ol79P-348MB-08-25">喵子Nyako 原神甘雨ol[79P-348MB]</a></p>
+  <p><a href="https://telegra.ph/喵子Nyako-原神甘雨魅魔-76P-348MB-08-25">喵子Nyako 原神甘雨魅魔 [76P-348MB]</a></p>
+  <p><a href="https://telegra.ph/Nyako喵子-大凤纯白婚纱-08-25">Nyako喵子 大凤纯白婚纱</a></p>
+  <p><a href="https://telegra.ph/Nyako喵子-路易九世--旗袍48P248MB-08-25">Nyako喵子 路易九世 – 旗袍(48P248MB)</a></p>
+  <p><a href="https://telegra.ph/Nyako喵子-爱宕婚纱62P177MB-08-25">Nyako喵子 爱宕婚纱(62P177MB)</a></p>
 </body>
 </html>
