--- a/福利姬频道总目录/byoru全集/menu.html
+++ b/福利姬频道总目录/byoru全集/menu.html
@@ -60,6 +60,14 @@
   <p><a href="https://telegra.ph/Lucy-25P-305MB-08-25">byoru Lucy [25P-305MB]</a></p>
   <p><a href="https://telegra.ph/Bomb-Devil-38P-179MB-08-25">byoru Bomb Devil [38P-179MB]</a></p>
   <p><a href="https://telegra.ph/Sally-Makima-x-Power-25P-114MB-08-25">byoru &Sally Makima x Power [25P-114MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="https://telegra.ph/Byoru-Quiet34P-08-25">Byoru-Quiet[34P]</a></p>
+  <p><a href="https://telegra.ph/Byoru---妮可罗宾-08-25">Byoru - 妮可罗宾</a></p>
+  <p><a href="https://telegra.ph/Byoru---黑崎一护-08-25">Byoru - 黑崎一护</a></p>
+  <p><a href="https://telegra.ph/Byoru---Jett32P-08-25">Byoru - Jett[32P]</a></p>
+  <p><a href="https://telegra.ph/Byoru---Arlecchino-08-25">Byoru - Arlecchino</a></p>
+  <p><a href="https://telegra.ph/Byoru---Natigaru-56P-248MB-08-25">Byoru - Natigaru [56P-248MB]</a></p>
+  <p><a href="https://telegra.ph/Byoru---Gawr-Gura-91P-147MB-08-25">Byoru - Gawr Gura [91P-147MB]</a></p>
+  <p><a href="https://telegra.ph/Byoru---Tifa-08-25">Byoru - Tifa</a></p>
+
 </body>
 </html>
