--- a/福利姬频道总目录/yuuhui玉汇全集/menu.html
+++ b/福利姬频道总目录/yuuhui玉汇全集/menu.html
@@ -86,7 +86,13 @@
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87-Vol041-%E8%A1%97%E5%A4%B4%E9%9C%B8%E7%8E%8B-%E6%98%A5%E4%B8%BD-89p-08-23">玉汇 Vol.041 街头霸王-春丽 89p</a></p>
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87-%E5%9C%A3%E8%AF%9E%E7%89%B9%E8%BE%91-%E5%B0%BC%E5%B0%94%E6%9C%BA%E6%A2%B0%E7%BA%AA%E5%85%83-%E8%87%AA%E6%8B%8D%E5%8C%85-102P-464MB-08-23">玉汇 圣诞特辑-尼尔·机械纪元 自拍包 [102P-464MB]</a></p>
   <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87-%E8%9C%A1%E7%8B%90-163P1V-%E6%B1%89%E6%9C%8D-08-23">yuuhui玉汇 蜡狐 163P1V (汉服)</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/yuuhui玉汇-初音黑兔cosplay写真NSFW频道-httpstmedouza-08-25">yuuhui玉汇 初音黑兔cosplay写真[NSFW]频道 https://t.me/douza</a></p>
+  <p><a href="https://telegra.ph/玉汇-妹の泳装22P-336MB-08-25">玉汇 妹の泳装[22P-336MB]</a></p>
+  <p><a href="https://telegra.ph/玉汇-Vol035-游泳部学妹-89p-08-25">玉汇 Vol.035 游泳部学妹 89p</a></p>
+  <p><a href="https://telegra.ph/玉汇-Vol034-爱欲之神-08-25">玉汇 Vol.034 爱欲之神</a></p>
+  <p><a href="https://telegra.ph/yuuhui玉汇-女仆假日-08-25">yuuhui玉汇 女仆假日</a></p>
+  <p><a href="https://telegra.ph/yuuhui玉汇-约尔-08-25">yuuhui玉汇 约尔</a></p>
+  <p><a href="https://telegra.ph/玉汇-Vol033-圣女の史莱姆修行计划-106p-08-25">玉汇 Vol.033 圣女の史莱姆修行计划 106p</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
