--- a/福利姬频道总目录/一只废喵全集/menu.html
+++ b/福利姬频道总目录/一只废喵全集/menu.html
@@ -13,7 +13,9 @@
   <p><a href="https://telegra.ph/%E4%B8%80%E5%8F%AA%E5%BA%9F%E5%96%B5---fantia2401%E8%AE%A2%E9%98%85-08-22">一只废喵 - fantia2401订阅</a></p>
   <p><a href="https://telegra.ph/%E4%B8%80%E5%8F%AA%E5%BA%9F%E5%96%B5---fantia2312%E8%AE%A2%E9%98%85-%E5%9C%A3%E8%AF%9E%E5%A5%B3%E5%AD%A9-08-22">一只废喵 - fantia2312订阅 圣诞女孩</a></p>
   <p><a href="https://telegra.ph/%E4%B8%80%E5%8F%AA%E5%BA%9F%E5%96%B5---fantia2312%E8%AE%A2%E9%98%85-08-22">一只废喵 - fantia2312订阅</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/一只废喵-圣诞麋鹿-73P7V-352MB-08-25">一只废喵 圣诞麋鹿 [73P7V-352MB]</a></p>
+  <p><a href="https://telegra.ph/一只废喵-圣诞比基尼连衣裙-72P3V-620MB-08-25">一只废喵 圣诞比基尼+连衣裙 [72P3V-620MB]</a></p>
+
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
