--- a/福利姬频道总目录/喵小吉(暴机少女喵小吉)全集/menu.html
+++ b/福利姬频道总目录/喵小吉(暴机少女喵小吉)全集/menu.html
@@ -21,6 +21,16 @@
   <p><a href="https://telegra.ph/小吉的快乐野餐2月1打赏群资源-08-25">暴机少女喵小吉 小吉的快乐野餐（2月1打赏群资源）</a></p>
   <p><a href="https://telegra.ph/小吉的答谢礼22月1打赏群资源-08-25">暴机少女喵小吉 小吉的答谢礼2（2月1打赏群资源）</a></p>
   <p><a href="https://telegra.ph/小吉的秘密花园12月17打赏群资源-08-25">暴机少女喵小吉 小吉的秘密花园（12月17打赏群资源）</a></p>
-  <p><a href="../index.html">返回总目录</a></p>    
+  <p><a href="https://telegra.ph/喵小吉-长相思12月1打赏群资源-08-25">喵小吉 长相思（12月1打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/小吉的家政服务12月1打赏群资源-08-25">喵小吉 小吉的家政服务（12月1打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/喵小吉-双子最强冰雪组合优菈甘雨12月1打赏群资源-08-25">喵小吉 双子：最强冰雪组合（优菈&甘雨）（12月1打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/喵小吉-小吉忍法帖10月31打赏群资源-08-25">喵小吉 小吉忍法帖（10月31打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/喵小吉-赛博朋克-超梦10月31打赏群资源-08-25">喵小吉 赛博朋克 超梦（10月31打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/喵小吉-如梦令10月31打赏群资源-08-25">喵小吉 如梦令（10月31打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/喵小吉-镜花水月10月31打赏群资源-08-25">喵小吉 镜花水月（10月31打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/小吉的小镇生活10月1打赏群资源-08-25">喵小吉 小吉的小镇生活（10月1打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/小吉的暑期补习班10月1打赏群资源-08-25">喵小吉 小吉的暑期补习班（10月1打赏群资源）</a></p>
+
+
 </body>
 </html>
