--- a/福利姬频道总目录/小仓千代w全集/menu.html
+++ b/福利姬频道总目录/小仓千代w全集/menu.html
@@ -17,6 +17,13 @@
   <p><a href="https://telegra.ph/%E5%B0%8F%E4%BB%93%E5%8D%83%E4%BB%A3w---%E9%A3%9B%E9%B3%A5%E9%A6%AC%E3%83%88%E3%82%AD%E5%90%8C%E4%BA%BA-33P-941MB-08-19">小仓千代w - 飛鳥馬トキ同人 [33P-94.1MB]</a></p>
   <p><a href="https://telegra.ph/%E5%B0%8F%E4%BB%93%E5%8D%83%E4%BB%A3w---%E6%AF%92%E8%9B%87%E6%B3%B3%E8%A3%85-44P-146MB-08-19">小仓千代w - 毒蛇泳装 [44P-146MB]</a></p>
   <p><a href="https://telegra.ph/%E5%B0%8F%E4%BB%93%E5%8D%83%E4%BB%A3w---%E8%B6%85%E7%BA%A7%E7%B4%A2%E5%B0%BC%E5%AD%90%E6%B5%B4%E8%A1%A3-55P-146MB-08-19">小仓千代w - 超级索尼子浴衣 [55P-146MB]</a></p>
+  <p><a href="https://telegra.ph/小仓千代-南丁女仆-22P-122MB-08-25">小仓千代 南丁女仆 [22P-122MB]</a></p>
+  <p><a href="https://telegra.ph/小仓千代-梦魔利兹-30P-182MB-08-25">小仓千代 梦魔利兹 [30P-182MB]</a></p>
+  <p><a href="https://telegra.ph/小仓千代-剑圣女-40P-424MB-08-25">小仓千代 剑圣女 [40P-424MB]</a></p>
+  <p><a href="https://telegra.ph/小仓千代w-可可爱爱花嫁-32P-107MB-08-25">小仓千代w 可可爱爱花嫁 [32P-107MB]</a></p>
+  <p><a href="https://telegra.ph/小仓千代-明日奈-兔女郎23P-65MB-08-25">小仓千代 明日奈 兔女郎[23P-65MB]</a></p>
+  <p><a href="https://telegra.ph/小仓千代-猫毛毯26P-44MB-08-25">小仓千代 猫毛毯[26P-44MB]</a></p>
+  <p><a href="https://telegra.ph/小仓千代w-黛朵礼服-19P-154MB-08-25">小仓千代w 黛朵礼服 [19P-154MB]</a></p>
 </a></p> 
 </body>
 </html>
