--- a/福利姬频道总目录/布丁大法 米布丁&油布丁 再来一勺大布丁全集/menu.html
+++ b/福利姬频道总目录/布丁大法 米布丁&油布丁 再来一勺大布丁全集/menu.html
@@ -67,9 +67,20 @@
   <p><a href="https://telegra.ph/布丁大法-衬衫吊带黑丝24P1V-252M-08-25">布丁大法 衬衫吊带黑丝[24P1V-252M]</a></p>
   <p><a href="https://telegra.ph/布丁大法-黑色旗袍44P3V-294M-08-25">布丁大法 黑色旗袍[44P3V-294M]</a></p>
   <p><a href="https://telegra.ph/布丁大法-黑色毛衣23P1V-143M-08-25">布丁大法 黑色毛衣[23P1V-143M]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>  
-  <p><a href="../index.html">返回总目录</a></p> 
+  <p><a href="https://telegra.ph/布丁大法-莓果挞-08-25">布丁大法 莓果挞</a></p>
+  <p><a href="https://telegra.ph/布丁大法---N8琉璃果冻-08-25">布丁大法 - N8琉璃果冻</a></p>
+  <p><a href="https://telegra.ph/布丁-黑糖拿铁-08-25">布丁 黑糖拿铁</a></p>
+  <p><a href="https://telegra.ph/布丁-冰美式-08-25">布丁 冰美式</a></p>
+  <p><a href="https://telegra.ph/布丁-吐司面包-08-25">布丁 吐司面包</a></p>
+  <p><a href="https://telegra.ph/布丁大法---9月素材包-89P8V-758MB-08-25">布丁大法 - 9月素材包 89P8V 758MB</a></p>
+  <p><a href="https://telegra.ph/布丁大法---芋泥麻薯56P2V-141GB-08-25">布丁大法 - 芋泥麻薯56P2V 1.41GB</a></p>
+  <p><a href="https://telegra.ph/布丁大法---生巧54P7V-154GB-08-25">布丁大法 - 生巧54P7V 1.54GB</a></p>
+  <p><a href="https://telegra.ph/布丁-八月素材包-肉撕-08-25">布丁 八月素材包 肉撕</a></p>
+  <p><a href="https://telegra.ph/布丁-八月素材包-灰吊带9月5会员资源-08-25">布丁 八月素材包 灰吊带（9月5会员资源）</a></p>
+  <p><a href="https://telegra.ph/布丁-八月素材包-蝴蝶结9月5会员资源-08-25">布丁 八月素材包 蝴蝶结（9月5会员资源）</a></p>
+  <p><a href="https://telegra.ph/布丁-八月素材包-jk9月5会员资源-08-25">布丁 八月素材包 jk（9月5会员资源）</a></p>
+  <p><a href="https://telegra.ph/布丁-八月素材包-jk9月5会员资源-08-25-2">布丁 八月素材包 jk（9月5会员资源）</a></p>
+  <p><a href="https://telegra.ph/布丁大法---虎皮蛋糕-08-25">布丁大法 - 虎皮蛋糕</a></p>
   <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
