--- a/福利姬频道总目录/星之迟迟全集/menu.html
+++ b/福利姬频道总目录/星之迟迟全集/menu.html
@@ -108,5 +108,16 @@
   <p><a href="https://telegra.ph/星之迟迟-约尔-圣诞31月21打赏群资源-08-25">星之迟迟 约尔-圣诞3（1月21打赏群资源）</a></p>
   <p><a href="https://telegra.ph/星之迟迟-约尔-圣诞1-私服-08-25">星之迟迟 约尔 圣诞1 私服</a></p>
   <p><a href="https://telegra.ph/星之迟迟-11月计划D-原创-同学妈妈的招待12月7打赏群资源-08-25">星之迟迟 11月计划D 原创 同学妈妈的招待（12月7打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-碧蓝航线-让巴尔-43P-206MB-08-25">星之迟迟 碧蓝航线 让巴尔 [43P-206MB]</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-C本-死或生-霞-08-25">星之迟迟 C本 死或生 霞</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-B本原创-体操服妹妹11月26打赏群资源-08-25">星之迟迟 B本原创 体操服妹妹（11月26打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-11月计划A本杀戮都市-下平玲花11月26打赏群资源-08-25">星之迟迟 11月计划A本杀戮都市 下平玲花（11月26打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-10月计划D-原创-催眠妹妹11月12打赏群资源-08-25">星之迟迟 10月计划D 原创-催眠妹妹（11月12打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-10月计划C-路人女主的养成方法-霞之丘诗羽11月12打赏群资源-08-25">星之迟迟 10月计划C 路人女主的养成方法-霞之丘诗羽（11月12打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-10月计划A-守望先锋57P1V-395MB-08-25">星之迟迟 10月计划A 守望先锋[57P1V-395MB]</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-万圣节-菊千代11月5打赏群资源-08-25">星之迟迟 万圣节-菊千代（11月5打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-9月计划B-莲花JK10月14打赏群资源-08-25">星之迟迟 9月计划B 莲花JK（10月14打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-9月计划A-胡桃死库水10月14打赏群资源-08-25">星之迟迟 9月计划A 胡桃死库水（10月14打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-9月计划C-JK大风10月14打赏群资源-08-25">星之迟迟 9月计划C JK大风（10月14打赏群资源）</a></p>
 </body>
 </html>
