--- a/福利姬频道总目录/是依酱吖(是依酱呀)全集/menu.html
+++ b/福利姬频道总目录/是依酱吖(是依酱呀)全集/menu.html
@@ -24,7 +24,9 @@
   <p><a href="https://telegra.ph/依酱-酒心巧克力2月22打赏群资源-08-24">依酱 酒心巧克力（2月22打赏群资源）</a></p>
   <p><a href="https://telegra.ph/依酱-黑巧2月22打赏群资源-08-24">依酱 黑巧（2月22打赏群资源）</a></p>
   <p><a href="https://telegra.ph/依酱-白巧兔女郎2月22打赏群资源-08-24">依酱 白巧+兔女郎（2月22打赏群资源）</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/依酱-七夕特辑--红色波点38P3V-226MB-08-25">依酱 七夕特辑 – 红色波点[38P3V-226MB]</a></p>
+  <p><a href="https://telegra.ph/依酱-七夕特辑-罩衫比基尼-08-25">依酱 七夕特辑 罩衫比基尼</a></p>
+  <p><a href="https://telegra.ph/依酱-七夕特辑-镂空透视-08-25">依酱 七夕特辑 镂空透视</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
