--- a/福利姬频道总目录/末夜787全集/menu.html
+++ b/福利姬频道总目录/末夜787全集/menu.html
@@ -23,6 +23,8 @@
   <p><a href="https://telegra.ph/末夜787-蕾姆女仆泳装-47P-407MB-08-25">末夜787 蕾姆女仆泳装 [47P-407MB]</a></p>
   <p><a href="https://telegra.ph/末夜787-禁忌之恋-猫娘-56P-769MB-08-25">末夜787 禁忌之恋 猫娘 [56P-769MB]</a></p>
   <p><a href="https://telegra.ph/末夜787-碧蓝航线-光辉魅魔-40P-105GB-08-25">末夜787 碧蓝航线 光辉魅魔 [40P-1.05GB]</a></p>
-
+  <p><a href="https://telegra.ph/末夜787---战斗猫娘-40P3V163G-08-25">末夜787 - 战斗猫娘 [40P3V1.63G]</a></p>
+  <p><a href="https://telegra.ph/末夜787---五月舰长-72P-440MB-08-25">末夜787 - 五月舰长 [72P-440MB]</a></p>
+  <p><a href="https://telegra.ph/末夜787--奴隶x女皇-08-25">末夜787 – 奴隶x女皇</a></p>
 </body>
 </html>
