--- a/福利姬频道总目录/桜桃喵全集/menu.html
+++ b/福利姬频道总目录/桜桃喵全集/menu.html
@@ -42,6 +42,10 @@
   <p><a href="https://telegra.ph/桜桃喵-闪灵泳装-08-25">桜桃喵 闪灵泳装</a></p>
   <p><a href="https://telegra.ph/桜桃喵-蕾姆小睡裙-24P-410MB-08-25">桜桃喵 蕾姆小睡裙 [24P-410MB]</a></p>
   <p><a href="https://telegra.ph/桜桃喵-天照LOLITA-21P-485MB-08-25">桜桃喵 天照LOLITA [21P-485MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/桜桃喵-药指-08-25">桜桃喵 药指</a></p>
+  <p><a href="https://telegra.ph/桜桃喵-花见巫女-32P-638MB-08-25">桜桃喵 花见巫女 [32P-638MB]</a></p>
+  <p><a href="https://telegra.ph/桜桃喵-长发蕾姆02-44P-684MB-08-25">桜桃喵 长发蕾姆02 [44P-684MB]</a></p>
+  <p><a href="https://telegra.ph/桜桃喵-长发蕾姆01-45P-685MB-08-25">桜桃喵 长发蕾姆01 [45P-685MB]</a></p>
+  <p><a href="https://telegra.ph/桜桃喵-约尔8月19会员资源cosplay写真NSFW频道-httpstmedouza-08-25">桜桃喵 约尔（8月19会员资源）cosplay写真[NSFW]频道 https://t.me/douza</a></p>
 </body>
 </html>
