--- a/福利姬频道总目录/洛桑w伊梓全集/menu.html
+++ b/福利姬频道总目录/洛桑w伊梓全集/menu.html
@@ -18,7 +18,8 @@
   <p><a href="https://telegra.ph/洛桑w伊梓-小草神1月6打赏群资源-08-25">洛桑w伊梓 小草神（1月6打赏群资源）</a></p>
   <p><a href="https://telegra.ph/桑w伊梓-网袜丝带兔兔12月25打赏群资源-08-25">洛桑w伊梓 网袜丝带兔兔（12月25打赏群资源）</a></p>
   <p><a href="https://telegra.ph/洛桑w伊梓-猫耳小恶魔-08-25">洛桑w伊梓 猫耳小恶魔</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/洛桑w伊梓-暖冬日记-08-25">洛桑w伊梓 暖冬日记</a></p>
+  <p><a href="https://telegra.ph/洛桑w伊梓-眼镜妹妹-08-25">洛桑w伊梓 眼镜妹妹</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
