--- a/福利姬频道总目录/清水由乃全集/menu.html
+++ b/福利姬频道总目录/清水由乃全集/menu.html
@@ -25,7 +25,13 @@
   <p><a href="https://telegra.ph/%E6%B8%85%E6%B0%B4%E7%94%B1%E4%B9%83-2023%E6%96%B0%E5%B9%B4%E6%97%97%E8%A2%8D-77P-770MB-08-23">清水由乃 2023新年旗袍 [77P-770MB]</a></p>
   <p><a href="https://telegra.ph/清水由乃-麻花少女-08-24">清水由乃 麻花少女</a></p>
   <p><a href="https://telegra.ph/清水由乃-靡烟旗袍-08-24">清水由乃 靡烟旗袍</a></p>
-
+  <p><a href="https://telegra.ph/清水由乃-金发旗袍-69P-483MB-08-25">清水由乃 金发旗袍 [69P-483MB]</a></p>
+  <p><a href="https://telegra.ph/清水由乃-鹩-花嫁-59P-1V10月13打赏群资源-08-25">清水由乃 鹩 花嫁 59P 1V（10月13打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/清水由乃-樫野兔女郎cosplay写真NSFW频道-httpstmedouza-08-25">清水由乃 樫野兔女郎cosplay写真[NSFW]频道 https://t.me/douza</a></p>
+  <p><a href="https://telegra.ph/清水由乃---英仙座护士服52P834M-08-25">清水由乃 - 英仙座护士服[52P834M]</a></p>
+  <p><a href="https://telegra.ph/清水由乃---泰丝机娘32P413M-08-25">清水由乃 - 泰丝机娘[32P413M]</a></p>
+  <p><a href="https://telegra.ph/清水由乃---法式内衣-08-25">清水由乃 - 法式内衣</a></p>
+  <p><a href="https://telegra.ph/清水由乃---白色毛衣32P1V309M-08-25">清水由乃 - 白色毛衣[32P1V309M]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
