--- a/福利姬频道总目录/焖焖碳全集/menu.html
+++ b/福利姬频道总目录/焖焖碳全集/menu.html
@@ -17,5 +17,21 @@
   <p><a href="https://telegra.ph/焖焖碳-能代-15P-132MB-08-25">焖焖碳 能代 [15P-132MB]</a></p>
   <p><a href="https://telegra.ph/焖焖碳-恶毒兔头-15P-107MB-08-25">焖焖碳 恶毒兔头 [15P-107MB]</a></p>
   <p><a href="https://telegra.ph/焖焖碳-麻辣兔头X异色兔-38P-345MB-08-25">焖焖碳 麻辣兔头X异色兔 [38P-345MB]</a></p>
+  <p><a href="https://telegra.ph/焖焖碳---恶毒泳衣-37P-120M-08-25">焖焖碳 - 恶毒泳衣  37P-120M</a></p>
+  <p><a href="https://telegra.ph/焖焖碳---绫波改-25P-237MB-08-25">焖焖碳 - 绫波改 [25P-237MB]</a></p>
+  <p><a href="https://telegra.ph/焖焖碳---绫波-宅版本-29P-181MB-08-25">焖焖碳 - 绫波 宅版本 [29P-181MB]</a></p>
+  <p><a href="https://telegra.ph/焖焖碳---可畏礼服-33P-203MB-08-25">焖焖碳 - 可畏礼服 [33P-203MB]</a></p>
+  <p><a href="https://telegra.ph/焖焖碳---可畏-20P-124MB-08-25">焖焖碳 - 可畏 [20P-124MB]</a></p>
+  <p><a href="https://telegra.ph/焖焖碳---加斯科涅泳装-28P-186MB-08-25">焖焖碳 - 加斯科涅泳装 [28P-186MB]</a></p>
+  <p><a href="https://telegra.ph/焖焖碳---鸢一折纸灵衣20P-113MB-08-25">焖焖碳 - 鸢一折纸灵衣[20P-113MB]</a></p>
+  <p><a href="https://telegra.ph/焖焖碳-赫敏-20P-130MB-08-25">焖焖碳 赫敏 [20P-130MB]</a></p>
+  <p><a href="https://telegra.ph/焖焖碳-葛饰阿荣-22P-206MB-08-25">焖焖碳 葛饰阿荣 [22P-206MB]</a></p>
+  <p><a href="https://telegra.ph/焖焖碳-高雄泳装-24P-164MB-08-25">焖焖碳 高雄泳装 [24P-164MB]</a></p>
+  <p><a href="https://telegra.ph/焖焖碳-大凤旗袍-20P-193MB-08-25">焖焖碳 大凤旗袍 [20P-193MB]</a></p>
+  <p><a href="https://telegra.ph/焖焖碳-初音兔女郎-20P-239MB-08-25">焖焖碳 初音兔女郎 [20P-239MB]</a></p>
+  <p><a href="https://telegra.ph/焖焖碳-碧蓝航线-長門睡衣-27P-88MB-08-25">焖焖碳 碧蓝航线 長門睡衣 [27P-88MB]</a></p>
+  <p><a href="https://telegra.ph/焖焖碳-麻衣学姐-兔女郎-08-25">焖焖碳 麻衣学姐 兔女郎</a></p>
+  <p><a href="https://telegra.ph/焖焖碳-女仆-08-25">焖焖碳 女仆</a></p>
+
 </body>
 </html>
