--- a/福利姬频道总目录/胡桃喵全集/menu.html
+++ b/福利姬频道总目录/胡桃喵全集/menu.html
@@ -9,7 +9,18 @@
 	<p><a href="../index.html">返回当前频道总目录</a></p>
   </div>
   <hr>
-  <p><a href="../index.html">返回总目录</a></p>
+
   <p><a href="https://telegra.ph/%E8%83%A1%E6%A1%83%E5%96%B5-%E9%AD%85%E9%AD%94-80P1V-08-22">胡桃喵 魅魔 80P1V</a></p>  
+  <p><a href="https://telegra.ph/胡桃喵-醉酒当歌-08-25">胡桃喵 醉酒当歌</a></p>
+  <p><a href="https://telegra.ph/胡桃喵-月光温柔乡白旗袍-08-25">胡桃喵 月光温柔乡白旗袍</a></p>
+  <p><a href="https://telegra.ph/胡桃喵-蜜桃牛乳-08-25">胡桃喵 蜜桃牛乳</a></p>
+  <p><a href="https://telegra.ph/胡桃喵-暗黑兔女郎-08-25">胡桃喵 暗黑兔女郎</a></p>
+  <p><a href="https://telegra.ph/胡桃喵-JK创口贴-08-25">胡桃喵 JK创口贴</a></p>
+  <p><a href="https://telegra.ph/胡桃喵-08-25">胡桃喵</a></p>
+  <p><a href="https://telegra.ph/胡桃喵---朝晨曦和-80P5V-08-25">胡桃喵 - 朝晨曦和 [80P+5V]</a></p>
+  <p><a href="https://telegra.ph/胡桃喵x巧克力小圆面包---粉黑X兔兔-恋兔之踪-145P1V-08-25">胡桃喵x巧克力小圆面包 - 粉黑X兔兔 『恋兔之踪』 [145P+1V]</a></p>
+  <p><a href="https://telegra.ph/胡桃喵---更衣女仆-71P4V-08-25">胡桃喵 - 更衣女仆 [71P+4V]</a></p>
+  <p><a href="https://telegra.ph/胡桃喵---更衣女仆-71P4V-08-25-2">胡桃喵 - 更衣女仆 [71P+4V]</a></p>
+
 </body>
 </html>
