--- a/福利姬频道总目录/胡桃猫Kurumineko全集/menu.html
+++ b/福利姬频道总目录/胡桃猫Kurumineko全集/menu.html
@@ -12,7 +12,10 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E8%83%A1%E6%A1%83%E7%8C%ABKurumineko---%E7%94%B7%E5%8F%8B%E8%A1%AC%E8%A1%AB-08-20">胡桃猫Kurumineko - 男友衬衫</a></p>
   <p><a href="https://telegra.ph/%E8%83%A1%E6%A1%83%E7%8C%ABKurumineko-%E7%94%98%E9%9B%A8OL-110P1V-%E5%8E%9F%E7%A5%9E-08-22">胡桃猫Kurumineko 甘雨OL 110P1V (原神)</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/胡桃猫-美少女万华镜-理与迷宫的少女-105P115G-08-24">胡桃猫 美少女万华镜 理与迷宫的少女 [105P1.15G]</a></p>
+  <p><a href="https://telegra.ph/胡桃猫Kurumineko-反差学妹-132P-136GB-08-25">胡桃猫Kurumineko 反差学妹 [132P-1.36GB]</a></p>
+  <p><a href="https://telegra.ph/胡桃猫珍吱---不寻常诊疗预约-188P5V28G-08-25">胡桃猫&珍吱 - 不寻常诊疗预约 [188P5V2.8G]</a></p>
+  <p><a href="https://telegra.ph/胡桃猫---南半球竟泳-150P6V478M-08-25">胡桃猫 - 南半球竟泳 [150P6V478M]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
