--- a/福利姬频道总目录/许岚LAN全集/menu.html
+++ b/福利姬频道总目录/许岚LAN全集/menu.html
@@ -22,8 +22,20 @@
   <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A-%E9%BB%91%E4%B8%9D%E6%8A%A4%E5%A3%AB-40P-753M-08-23">许岚 黑丝护士 [40P-753M]</a></p>
   <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9ALAN-%E6%94%BE%E5%AD%A6%E5%9B%9E%E5%AE%B6-31P-08-23">许岚LAN 放学回家 31P</a></p>
   <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A-%E7%81%B0%E8%A3%99X%E7%81%B0%E4%B8%9D%E5%A7%90%E5%A7%90-08-23">许岚 灰裙X灰丝姐姐</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/许岚-韩系制服4月18打赏群资源-08-24">许岚 韩系制服（4月18打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/许岚-黑丝女警5月20打赏群资源-08-24">许岚 黑丝女警（5月20打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/许岚LAN-网袜红裙2月23打赏群资源-08-25">许岚LAN 网袜红裙（2月23打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/许岚LAN-纯欲毛衣-40P-458MB-08-25">许岚LAN 纯欲毛衣 [40P-458MB]</a></p>
+  <p><a href="https://telegra.ph/许岚LAN-白丝水手服-40P-608MB-08-25">许岚LAN 白丝水手服 [40P-608MB]</a></p>
+  <p><a href="https://telegra.ph/许岚LAN-暗黑修女-40P-640MB-08-25">许岚LAN 暗黑修女 [40P-640MB]</a></p>
+  <p><a href="https://telegra.ph/许岚-蓝色芭蕾40P-534MB-08-25">许岚 蓝色芭蕾[40P-534MB]</a></p>
+  <p><a href="https://telegra.ph/许岚LAN-半透粉纱-08-25">许岚LAN 半透粉纱</a></p>
+  <p><a href="https://telegra.ph/许岚LAN-黑纱旗袍-08-25">许岚LAN 黑纱旗袍</a></p>
+  <p><a href="https://telegra.ph/许岚LAN-冰淇淋-08-25">许岚LAN 冰淇淋</a></p>
+  <p><a href="https://telegra.ph/许岚LAN-夏日运动服-08-25">许岚LAN 夏日运动服</a></p>
+  <p><a href="https://telegra.ph/许岚LAN-修女创作-08-25">许岚LAN 修女创作</a></p>
+  <p><a href="https://telegra.ph/许岚LAN-短裙女仆-08-25">许岚LAN 短裙女仆</a></p>
+  <p><a href="https://telegra.ph/许岚LAN-灰丝制服-40P-516MB-08-25">许岚LAN 灰丝制服 [40P-516MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
