--- a/福利姬频道总目录/麻花酱全集/menu.html
+++ b/福利姬频道总目录/麻花酱全集/menu.html
@@ -40,5 +40,17 @@
   <p><a href="https://telegra.ph/麻花酱-翠喜媚-32P-382MB-08-24">麻花酱 翠喜媚 [32P-382MB]</a></p>
   <p><a href="https://telegra.ph/麻花酱-08-24">麻花酱</a></p>
   <p><a href="https://telegra.ph/麻花酱-椿-08-24">麻花酱 椿</a></p>
+  <p><a href="https://telegra.ph/麻花麻花酱W-08-24">麻花麻花酱W</a></p>
+  <p><a href="https://telegra.ph/麻花酱-修女-08-25">麻花酱 修女</a></p>
+  <p><a href="https://telegra.ph/麻花酱-女仆系列-08-25">麻花酱 女仆系列</a></p>
+  <p><a href="https://telegra.ph/麻花酱-自拍包-08-25">麻花酱 自拍包</a></p>
+  <p><a href="https://telegra.ph/麻花酱-碧蓝护士-08-25">麻花酱 碧蓝护士</a></p>
+  <p><a href="https://telegra.ph/麻花酱-保守老师珍珠jk-80P2V-807MB-08-25">麻花酱 保守老师+珍珠jk [80P2V-807MB]</a></p>
+  <p><a href="https://telegra.ph/麻花酱-风拂电子档-210P1V-222GB-B本-08-25">麻花酱 风拂电子档 [210P1V-2.22GB] B本</a></p>
+  <p><a href="https://telegra.ph/麻花酱-风拂电子档-210P1V-222GB-A本-08-25">麻花酱 风拂电子档 [210P1V-2.22GB] A本</a></p>
+  <p><a href="https://telegra.ph/Makachan-麻花麻花酱---Memphis-Halloween-Azur-Lane-08-25">Makachan 麻花麻花酱 - Memphis Halloween (Azur Lane)</a></p>
+  <p><a href="https://telegra.ph/麻花酱---镇海-08-25">麻花酱 - 镇海</a></p>
+  <p><a href="https://telegra.ph/麻花酱---黑白婚纱-08-25">麻花酱 - 黑白婚纱</a></p>
+
 </body>
 </html>
