--- a/漫画(黑白)频道总目录/短篇全集/menu.html
+++ b/漫画(黑白)频道总目录/短篇全集/menu.html
@@ -18,6 +18,19 @@
   <p><a href="https://telegra.ph/%E8%B0%83%E6%95%99%E5%B0%91%E5%A5%B3%E8%BE%BE%E5%88%B0%E7%BB%9D%E9%A1%B6-no-name-Choukyou-Shoujo-Clitoris-Renzoku-Zecchou-Chinese-5DK%E4%B8%AA%E4%BA%BA%E6%B1%89%E5%8C%96-08-24">调教少女达到绝顶 </a></p>
   <p><a href="https://telegra.ph/DID%E9%83%A8-VS-BDSM%E9%83%A8-%E9%83%A8%E8%90%BD%E4%BA%89%E5%A4%BA%E6%88%98-ura-macoto-DID-club-VS-BDSM-clubclub-room-battle-DID-part-%E8%B5%B7%E8%90%BD%E5%A7%94%E6%89%98%E9%98%BF%E5%8D%A1%E5%A7%86%E6%B1%89%E5%8C%96-08-24">DID部 VS BDSM部 部落争夺战</a></p>
   <p><a href="https://telegra.ph/%E6%96%B0%E6%9C%BA%E6%B5%8B%E8%AF%95%E5%91%98-%E9%98%BF%E6%85%88%E8%B0%B7%E6%97%A5%E6%AD%A5%E7%BE%8E-2-The-Notes-E-Note-Machine-Tester-Ajitani-Hifumi-2-Blue-Archive-Chinese-Digital-08-24">新机测试员 阿慈谷日步美 2</a></p>
+  <p><a href="https://telegra.ph/%E3%81%99%E3%81%9F%E3%81%98%E3%81%8A%E5%AF%BF%E5%8F%B8%E3%81%8F%E3%81%84%E3%81%AD%E3%81%87-%E7%90%B4%E5%B3%B6%E3%82%82%E3%81%A8%E3%81%8D-%E8%A0%B1%E6%83%91%E3%81%AE%E9%9C%A7-%E3%83%96%E3%83%AB%E3%83%BC%E3%82%A2%E3%83%BC%E3%82%AB%E3%82%A4%E3%83%96-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3-DL%E7%89%88---Page-1-08-24-2">[すたじお寿司くいねぇ (琴島もとき)] 蠱惑の霧 (ブルーアーカイブ)</a></p>
+  <p><a href="https://telegra.ph/%E8%8C%9C%E3%81%97%E3%82%85%E3%81%86%E3%81%B8%E3%81%84%E5%A0%82-%E8%8C%9C%E3%81%97%E3%82%85%E3%81%86%E3%81%B8%E3%81%84-%E5%A5%B3%E5%AD%A6%E5%9C%92%E9%95%B7%E6%98%A5%E9%BA%97%E7%B7%8F%E9%9B%86%E7%B7%A8-%E3%82%B9%E3%83%88%E3%83%AA%E3%83%BC%E3%83%88%E3%83%95%E3%82%A1%E3%82%A4%E3%82%BF%E3%83%BC-DL%E7%89%88%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3%E8%80%83%E5%8F%A4%E5%AD%B8%E5%AE%B6%E6%BC%A2%E5%8C%96---Page-1-08-24-2">[茜しゅうへい堂 (茜しゅうへい)] 女学園長春麗、総集編</a></p>
+  <p><a href="https://telegra.ph/C105-%E3%81%95%E3%82%89%E3%81%95%E3%82%89%E3%81%A1%E3%82%83%E3%81%A5%E3%81%91-%E3%81%95%E3%81%A1%E3%82%83-%E3%83%8B%E3%83%A4%E3%83%8B%E3%83%A4%E6%95%99%E6%8E%88%E3%81%AB%E7%90%86%E8%A7%A3%E3%82%89%E3%81%9B-%E3%82%89%E3%82%8C-%E3%81%9F%E3%81%84-%E3%83%96%E3%83%AB%E3%83%BC%E3%82%A2%E3%83%BC%E3%82%AB%E3%82%A4%E3%83%96-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3---Page-1-08-24-2">想让笑面教授能够理解我都苦心</a></p>
+  <p><a href="../index.html">返回当前频道总目录</a></p>
+  <p><a href="../index.html">返回当前频道总目录</a></p>
+  <p><a href="../index.html">返回当前频道总目录</a></p>
+  <p><a href="../index.html">返回当前频道总目录</a></p>
+  <p><a href="../index.html">返回当前频道总目录</a></p>
+  <p><a href="../index.html">返回当前频道总目录</a></p>
+  <p><a href="../index.html">返回当前频道总目录</a></p>
+  <p><a href="../index.html">返回当前频道总目录</a></p>
+  <p><a href="../index.html">返回当前频道总目录</a></p>
+  <p><a href="../index.html">返回当前频道总目录</a></p>
   <p><a href="../index.html">返回当前频道总目录</a></p>
   <p><a href="../index.html">返回当前频道总目录</a></p>
   <p><a href="../index.html">返回当前频道总目录</a></p>
