--- a/福利姬频道总目录/eloise软软全集/menu.html
+++ b/福利姬频道总目录/eloise软软全集/menu.html
@@ -6,13 +6,13 @@
 <body>
   <div id="advertise">
     <iframe src="../../advertise.html" frameborder="0" width="100%" height="100"></iframe>
-	<p><a href="../index.html">返回当前频道总目录</a></p>
   </div>
   <hr>
+  <p><a href="https://telegra.ph/eloise软软-碧蓝伯爵-60P-657MB-08-25">eloise软软 碧蓝.伯爵 [60P-657MB]</a></p>
+  <p><a href="https://telegra.ph/eloise软软-乖乖的白丝48P-08-25">eloise软软 乖乖的白丝48P</a></p>
+  <p><a href="https://telegra.ph/eloise软软---河边JK-08-25">eloise软软 - 河边JK</a></p>
+  <p><a href="https://telegra.ph/eloise软软---OL115P5V15G-08-25">eloise软软 - OL[115P5V1.5G]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E5%A5%B6%E6%A1%83%E6%A1%83%E5%A5%88%E6%B1%90%E9%85%B1nice---%E6%99%A8%E6%98%8F%E7%BA%BF-08-19">奶桃桃×奈汐酱nice - 晨昏线</a></p>
-  <p><a href="https://telegra.ph/%E5%A5%B6%E6%A1%83%E6%A1%83-%E5%A5%88%E6%B1%90%E9%85%B1nice-%E9%99%90%E5%88%B6%E5%8C%BA-08-19">奶桃桃 奈汐酱nice 限制区</a></p>
-  <p><a href="https://telegra.ph/%E5%A5%B6%E6%A1%83-%E7%8B%97%E7%8B%9750-81P3V-08-22">奶桃 狗狗5.0 81P3V</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
