--- a/福利姬频道总目录/九言全集/menu.html
+++ b/福利姬频道总目录/九言全集/menu.html
@@ -67,7 +67,8 @@
   <p><a href="https://telegra.ph/九言-路易九世-08-25">九言 路易九世</a></p>
   <p><a href="https://telegra.ph/九言-不听话的妹妹-08-25">九言 不听话的妹妹</a></p>
   <p><a href="https://telegra.ph/九言-猫耳娘的裙底-08-25">九言 猫耳娘的裙底</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/九言-超短裤-08-25">九言 超短裤</a></p>
+  <p><a href="https://telegra.ph/九言-甘雨-33P6V-116MB-08-25">九言 甘雨 [33P6V-116MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p> 
   <p><a href="../index.html">返回总目录</a></p>
