--- a/福利姬频道总目录/杏仁曲奇全集/menu.html
+++ b/福利姬频道总目录/杏仁曲奇全集/menu.html
@@ -19,7 +19,8 @@
   <p><a href="https://telegra.ph/%E6%9D%8F%E4%BB%81%E6%9B%B2%E5%A5%87-%E7%8E%9B%E4%B8%BD%E7%BD%97%E4%B8%9D-40P-175MB-08-23">杏仁曲奇 玛丽罗丝 [40P-175MB]</a></p>
   <p><a href="https://telegra.ph/%E6%9D%8F%E4%BB%81%E6%9B%B2%E5%A5%87-%E5%8D%87%E7%8E%96%E5%90%89%E4%BB%96%E5%A7%90%E5%A7%90-45P-145MB-08-23">杏仁曲奇 升玖吉他姐姐 [45P-145MB]</a></p>
   <p><a href="https://telegra.ph/%E6%9D%8F%E4%BB%81%E6%9B%B2%E5%A5%87-%E5%BF%8F%E6%82%94%E4%BF%AE%E5%A5%B3-45P-097GB-08-23">杏仁曲奇 忏悔修女 [45P-0.97GB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/杏仁曲奇-吉他妹妹--20版-08-25">杏仁曲奇 吉他妹妹 – 2.0版</a></p>
+  <p><a href="https://telegra.ph/杏仁曲奇-瑜伽姐姐10月2打赏群资源-08-25">杏仁曲奇 瑜伽姐姐（10月2打赏群资源）</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
