--- a/福利姬频道总目录/瓜希酱全集/menu.html
+++ b/福利姬频道总目录/瓜希酱全集/menu.html
@@ -13,7 +13,12 @@
   <p><a href="https://telegra.ph/%E7%93%9C%E5%B8%8C%E9%85%B1---%E9%98%BF%E5%B0%94%E6%AF%94%E6%81%A9%E6%97%97%E8%A2%8D-08-19">瓜希酱 - 阿尔比恩旗袍</a></p>
   <p><a href="https://telegra.ph/%E7%93%9C%E5%B8%8C%E9%85%B1-%E5%8F%B2%E5%B0%94%E7%89%B9%E5%B0%94-104P-683MB-08-23">瓜希酱 史尔特尔 [104P-683MB]</a></p>
   <p><a href="https://telegra.ph/Momoko%E8%91%B5%E8%91%B5%E7%93%9C%E5%B8%8C%E9%85%B1-BA%E5%85%94%E5%85%94cos%E5%8F%8C%E4%BA%BA%E6%9C%AC-93P-272MB-08-23">Momoko葵葵&瓜希酱 BA兔兔cos双人本 [93P-272MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/瓜希酱-明日方舟-泥岩音律联觉-零号特工-25P-100MB-08-24">瓜希酱 明日方舟 泥岩音律联觉-零号特工 [25P-100MB]</a></p>
+  <p><a href="https://telegra.ph/瓜希酱-柴郡泳装-32P-102MB-08-24">瓜希酱 柴郡泳装 [32P-102MB]</a></p>
+  <p><a href="https://telegra.ph/瓜希酱-赛马娘大和赤骥电子档-08-24">瓜希酱 赛马娘大和赤骥电子档</a></p>
+  <p><a href="https://telegra.ph/瓜希酱-春日野穹-25P-172MB-08-25">瓜希酱 春日野穹 [25P-172MB]</a></p>
+  <p><a href="https://telegra.ph/瓜希酱-喜多川海梦泳装-20P-85MB-08-25">瓜希酱 喜多川海梦泳装 [20P-85MB]</a></p>
+  <p><a href="https://telegra.ph/瓜希酱-时崎狂三-08-25">瓜希酱 时崎狂三</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
