--- a/福利姬频道总目录/落落Raku全集/menu.html
+++ b/福利姬频道总目录/落落Raku全集/menu.html
@@ -23,7 +23,9 @@
   <p><a href="https://telegra.ph/落落raku-10月订阅-Trick-or-Treat-1月30打赏群资源-08-25">落落raku 10月订阅 Trick or Treat !!（1月30打赏群资源）</a></p>
   <p><a href="https://telegra.ph/落落Raku-Your-waifu1月21打赏群资源-08-25">落落Raku Your waifu♡（1月21打赏群资源）</a></p>
   <p><a href="https://telegra.ph/落落Raku-Dear-Deer-1月21打赏群资源-08-25">落落Raku Dear Deer ☆（1月21打赏群资源）</a></p>
-  <p><a href="../index.html">返回总目录</a></p>				  
+  <p><a href="https://telegra.ph/落落Raku-黒猫のソロダンス-08-25">落落Raku 黒猫のソロダンス</a></p>
+  <p><a href="https://telegra.ph/落落Raku-SunSeeker-08-25">落落Raku SunSeeker</a></p>
+  <p><a href="https://telegra.ph/落落Raku-Love-Atago-08-25">落落Raku Love, Atago</a></p>		  
   <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
 </body>
